--- a/codeResource/Divzor/Podfile
+++ b/codeResource/Divzor/Podfile
@@ -15,6 +15,8 @@ target "IBigRise" do
      pod 'LEEAlert'
      pod 'MJExtension'
      pod 'SSZipArchive'
+     pod 'MJRefresh'
+     pod 'SwiftyJSON'                   # JSON处理库
      
 #     pod 'IQKeyboardManager'
 #     pod 'SVProgressHUD'
