--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,27 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>kakaotalk</string>
+		<string>tg</string>
+		<string>http</string>
+		<string>https</string>
+		<string>whatsapp</string>
+		<string>line</string>
+		<string>twitter</string>
+		<string>tiktok</string>
+		<string>messenger</string>
+		<string>fb</string>
+		<string>youtube</string>
+	</array>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
 	<key>CFBundleDevelopmentRegion</key>
@@ -28,8 +49,18 @@
 	<true/>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>Divzor requires access to add new photos to your library, enabling you to save photos directly from the app.</string>
+	<key>NSContactsUsageDescription</key>
+	<string>Divzor need to use your address book permissions to recommend friends to you.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Divzor needs access to your location to provide you with information about the friends nearby.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Divzor needs access to your location to provide you with information about the friends nearby.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Divzor needs access to photo library to share images in chat.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Divzor needs to access the microphone to record audio information for users to have voice chats.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Divzor needs access to your camera to take profile pictures.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
